# OS2018spring-projects-g15

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  Xargo.toml  build.rs  linuxppc.qcow2
docs/: Final_pre.pptx  Middle_pre.pptx  final.pptx  report.md
src/: config.rs  consts.rs  device_manager.rs  irqs.rs  lang.rs  lib.rs  macros.rs  prelude.rs  rucore.txt  test.c  test_utils.rs  vga_buffer.rs
src/allocator/: linked_list.rs  mod.rs
src/arch/x86_64/: boot.asm  cpu.rs  gdt.rs  grub.cfg  idt.rs  linker.ld  mod.rs  pti.rs  smp.rs  syscall.rs
src/arch/x86_64/boot/: boot.asm  grub.cfg  linker.ld  (+1 more)
src/ata/: io.rs  mod.rs
src/interrupts/: gdt.rs  mod.rs
src/io/: mod.rs
src/memory/: address.rs  area_frame_allocator.rs  bump_allocator.rs  frame.rs  heap_allocator.rs  memory_set.rs  mod.rs  phys.rs  recycle_allocator.rs  stack_allocator.rs  virt.rs
src/memory/heap/: heapdef.rs  mod.rs
src/memory/helpers/: descriptor_pool.rs  dma_buffer.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
src/metadevs/: storage.rs
src/modules/: mod.rs
src/modules/ps2/: i8042.rs  keyboard.rs  mod.rs  mouse.rs  pl050.rs
src/mylib/: byte_str.rs  byteorder.rs  lazy_static.rs  mod.rs  pod.rs  queue.rs  ring_buffer.rs  sparse_vec.rs
src/mylib/collections/: mod.rs  vec_map.rs
src/mylib/mem/: aref.rs  grc.rs  mod.rs  rc.rs
src/process/: mod.rs  process.rs  processor.rs  procs.rs  stack.rs
src/storage_ata/: drivers.rs  io.rs  mod.rs  volume.rs
src/vfs/: handle.rs  mod.rs  mount.rs  node.rs  path.rs  ramfs.rs
(+37 files in other folders)
