[package]
name = "Rucore_OS"
version = "0.1.0"
authors = ["ivanium <ivanium@126.com>; Gword <xxx@yyy.zzz>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"
bitflags = "0.9.1"
x86_64 = "0.1.2"
once = "0.3.3"
linked_list_allocator = "0.5.0"