[package]
name = "rucore"
version = "0.1.0"
authors = ["ivanium <ivanium@126.com>; Gword <xxx@yyy.zzz>"]

[lib]
crate-type = ["staticlib"]

[features]
qemu_auto_exit = []
test = []
use_apic = []

[build-dependencies]
cc = "1.0"

[dependencies]
rlibc = "1.0"
volatile = "0.1.0"
spin = "0.4.5"
multiboot2 = "0.1.0"
bitflags = "1.0"
x86_64 = "0.1.2"
once = "0.3.3"
linked_list_allocator = "0.5.0"
bit_field = "0.7.0"

redox_syscall = "0.1.37"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]
